Criando seção de projetos

--- a/index.html
+++ b/index.html
@@ -232,7 +232,6 @@
                 </svg>
               </div>
             </div>
-
             <div class="tech-inner">
               <div class="tech">
                 <svg viewBox="0 0 128 128">
@@ -249,7 +248,125 @@
         </div>
       </section>
 
-      <section class="projects" id="projects"></section>
+      <section class="projects" id="projects">
+        <nav>
+          <ul>
+            <li>
+              <a href="#home">Home</a>
+            </li>
+            <li>
+              <a href="#about">About</a>
+            </li>
+            <li>
+              <a href="#projects">Projects</a>
+            </li>
+            <li>
+              <a href="#experience">Experience</a>
+            </li>
+            <li>
+              <a href="#resume">Resume</a>
+            </li>
+            <li>
+              <a href="#home">Links</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="container-projects">
+          <aside>
+            <h1>My Projects</h1>
+          </aside>
+          <main>
+            <div class="project-wrapper">
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/sort-number/"
+                  target="_blank"
+                  ><img src="./assets/images/sort-number.png" alt=""
+                /></a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/formulario-de-matricula/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img src="./assets/images/estrelas.svg" alt=""
+                /></a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/quicklist/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img src="./assets/images/quicklist.svg" alt=""
+                /></a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/zingen/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/zingen.png" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/convert/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/convert.png" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/refund/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/refund.png" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/lp-assinatura/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/lp-assinatura.png" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/lp-patins/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/lp-patins.svg" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/projeto-travelgram/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/travelgram.png" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/formulario-de-convite/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/festivite.png" alt="" />
+                </a>
+              </div>
+            </div>
+          </main>
+        </div>
+      </section>
     </div>
 
     <script src="script.js"></script>
