--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               </div>
               <div class="project-inner">
                 <a
-                  href="https://ayrtonyamashita.github.io/zingen/"
+                  href="https://ayrtonyamashita.github.io/lp-zingen/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
@@ -311,7 +311,7 @@
               </div>
               <div class="project-inner">
                 <a
-                  href="https://ayrtonyamashita.github.io/convert/"
+                  href="https://ayrtonyamashita.github.io/convert-template/"
                   target="_blank"
                   rel="noopener noreferrer"
                 >
