--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </li>
           </ul>
           <main>
-            <a href="#">
+            <a href="https://www.linkedin.com/in/ayrton-yamashita/">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
@@ -87,7 +87,7 @@
                 />
               </svg>
             </a>
-            <a href="#">
+            <a href="https://github.com/AyrtonYamashita">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
