Adicionando aba de resumo e links

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
             <a href="#experience">Experience</a>
           </li>
           <li>
-            <a href="#resume">Resume</a>
+            <a href="./assets/Ayrton-Yamashita.pdf" download>Resume</a>
           </li>
           <li>
-            <a href="#home">Links</a>
+            <a href="#links">Links</a>
           </li>
         </ul>
         <main>
-          <a href="#">
+          <a href="https://www.linkedin.com/in/ayrton-yamashita/">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
@@ -86,7 +86,7 @@
               />
             </svg>
           </a>
-          <a href="#">
+          <a href="https://github.com/AyrtonYamashita">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
@@ -124,7 +124,7 @@
             <a href="#experience">Experience</a>
           </li>
           <li>
-            <a href="#resume">Resume</a>
+            <a href="./assets/Ayrton-Yamashita.pdf" download>Resume</a>
           </li>
           <li>
             <a href="#home">Links</a>
@@ -270,7 +270,7 @@
             <a href="#experience">Experience</a>
           </li>
           <li>
-            <a href="#resume">Resume</a>
+            <a href="./assets/Ayrton-Yamashita.pdf" download>Resume</a>
           </li>
           <li>
             <a href="#home">Links</a>
@@ -408,10 +408,10 @@
             <a href="#experience">Experience</a>
           </li>
           <li>
-            <a href="#resume">Resume</a>
+            <a href="./assets/Ayrton-Yamashita.pdf" download>Resume</a>
           </li>
           <li>
-            <a href="#home">Links</a>
+            <a href="#links">Links</a>
           </li>
         </ul>
       </nav>
@@ -459,7 +459,7 @@
       </fieldset>
     </section>
 
-    <section class="resume" id="resume">
+    <section class="links" id="links">
       <nav>
         <ul>
           <li>
@@ -475,16 +475,39 @@
             <a href="#experience">Experience</a>
           </li>
           <li>
-            <a href="#resume">Resume</a>
+            <a href="./assets/Ayrton-Yamashita.pdf" download>Resume</a>
           </li>
           <li>
-            <a href="#home">Links</a>
+            <a href="#links">Links</a>
           </li>
         </ul>
       </nav>
-
       <fieldset>
-        <legend><strong>Resumo</strong></legend>
+        <legend><strong>Links</strong></legend>
+
+        <a href="https://github.com/AyrtonYamashita">
+          <div class="social-media">
+            <img src="./assets/icons/github.svg" alt="logo github" />
+            <span>Github</span>
+            <img src="./assets/icons/arrow.svg" alt="" />
+          </div>
+        </a>
+
+        <a href="https://www.linkedin.com/in/ayrton-yamashita/">
+          <div class="social-media">
+            <img src="./assets/icons/linkedin.svg" alt="logo linkedin" />
+            <span>Linkedin</span>
+            <img src="./assets/icons/arrow.svg" alt="" />
+          </div>
+        </a>
+
+        <a href="https://www.instagram.com/ayrton_yamashita/">
+          <div class="social-media">
+            <img src="./assets/icons/instagram.svg" alt="logo instagram" />
+            <span>Instagram</span>
+            <img src="./assets/icons/arrow.svg" alt="" />
+          </div>
+        </a>
       </fieldset>
     </section>
 
