--- a/index.html
+++ b/index.html
@@ -15,39 +15,111 @@
 
   <body>
     <section class="home" id="home">
+      <div class="select-section">
+        <div class="menu-hamburguer">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <a href="#home">Home</a>
+        <a href="#about">Sobre</a>
+        <a href="#projects">Projetos</a>
+        <a href="#experience">Experiencia</a>
+        <a href="./assets/Ayrton-Yamashita.pdf" download>Resumo</a>
+        <a href="#links">Links</a>
+      </div>
+
       <div class="container-home">
-        <aside>
-          <h1>Ayrton Yamashita</h1>
-          <legend>
+        <h1>Ayrton Yamashita</h1>
+        <div class="tech-wrapper">
+          <div class="tech-inner-1">
             I'm
             <div>
               <span>Fullstack</span>
               <span>Dev</span>
               <span>Fullstack</span>
             </div>
-          </legend>
-        </aside>
+          </div>
+          <div class="tech-inner-2">
+            <a href="https://www.linkedin.com/in/ayrton-yamashita/">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                width="24"
+                height="24"
+                color="#ffffff"
+                fill="none"
+              >
+                <path
+                  d="M7 10V17"
+                  stroke="currentColor"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M11 13V17M11 13C11 11.3431 12.3431 10 14 10C15.6569 10 17 11.3431 17 13V17M11 13V10"
+                  stroke="currentColor"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M7.00801 7L6.99902 7"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M2.5 12C2.5 7.52166 2.5 5.28249 3.89124 3.89124C5.28249 2.5 7.52166 2.5 12 2.5C16.4783 2.5 18.7175 2.5 20.1088 3.89124C21.5 5.28249 21.5 7.52166 21.5 12C21.5 16.4783 21.5 18.7175 20.1088 20.1088C18.7175 21.5 16.4783 21.5 12 21.5C7.52166 21.5 5.28249 21.5 3.89124 20.1088C2.5 18.7175 2.5 16.4783 2.5 12Z"
+                  stroke="currentColor"
+                  stroke-width="1.5"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </a>
+            <a href="https://github.com/AyrtonYamashita">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                width="24"
+                height="24"
+                color="#ffffff"
+                fill="none"
+              >
+                <path
+                  d="M6.51734 17.1132C6.91177 17.6905 8.10883 18.9228 9.74168 19.2333M9.86428 22C8.83582 21.8306 2 19.6057 2 12.0926C2 5.06329 8.0019 2 12.0008 2C15.9996 2 22 5.06329 22 12.0926C22 19.6057 15.1642 21.8306 14.1357 22C14.1357 22 13.9267 18.5826 14.0487 17.9969C14.1706 17.4113 13.7552 16.4688 13.7552 16.4688C14.7262 16.1055 16.2043 15.5847 16.7001 14.1874C17.0848 13.1032 17.3268 11.5288 16.2508 10.0489C16.2508 10.0489 16.5318 7.65809 15.9996 7.56548C15.4675 7.47287 13.8998 8.51192 13.8998 8.51192C13.4432 8.38248 12.4243 8.13476 12.0018 8.17939C11.5792 8.13476 10.5568 8.38248 10.1002 8.51192C10.1002 8.51192 8.53249 7.47287 8.00036 7.56548C7.46823 7.65809 7.74917 10.0489 7.74917 10.0489C6.67316 11.5288 6.91516 13.1032 7.2999 14.1874C7.79575 15.5847 9.27384 16.1055 10.2448 16.4688C10.2448 16.4688 9.82944 17.4113 9.95135 17.9969C10.0733 18.5826 9.86428 22 9.86428 22Z"
+                  stroke="currentColor"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
         <ul>
           <li>
-            <a href="#home">Home</a>
+            <a href="#home">Início</a>
           </li>
           <li>
-            <a href="#about">About</a>
+            <a href="#about">Sobre</a>
           </li>
           <li>
-            <a href="#projects">Projects</a>
+            <a href="#projects">Projetos</a>
           </li>
           <li>
-            <a href="#experience">Experience</a>
+            <a href="#experience">Experiência</a>
           </li>
           <li>
-            <a href="./assets/Ayrton-Yamashita.pdf" download>Resume</a>
+            <a href="./assets/Ayrton-Yamashita.pdf" download>Resumo</a>
           </li>
           <li>
             <a href="#links">Links</a>
           </li>
         </ul>
-        <main>
+        <div class="tech-inner-3">
           <a href="https://www.linkedin.com/in/ayrton-yamashita/">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -104,7 +176,7 @@
               />
             </svg>
           </a>
-        </main>
+        </div>
       </div>
     </section>
 
