Adicionando responsividade nas demais seções

--- a/index.html
+++ b/index.html
@@ -14,21 +14,20 @@
   </head>
 
   <body>
-    <section class="home" id="home">
-      <div class="select-section">
-        <div class="menu-hamburguer">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <a href="#home">Home</a>
-        <a href="#about">Sobre</a>
-        <a href="#projects">Projetos</a>
-        <a href="#experience">Experiencia</a>
-        <a href="./assets/Ayrton-Yamashita.pdf" download>Resumo</a>
-        <a href="#links">Links</a>
+    <div class="select-section mobile-only">
+      <div class="menu-hamburguer">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
-
+      <a href="#home">Home</a>
+      <a href="#about">Sobre</a>
+      <a href="#projects">Projetos</a>
+      <a href="#experience">Experiencia</a>
+      <a href="./assets/Ayrton-Yamashita.pdf" download>Resumo</a>
+      <a href="#links">Links</a>
+    </div>
+    <section class="home" id="home">
       <div class="container-home">
         <h1>Ayrton Yamashita</h1>
         <div class="tech-wrapper">
@@ -350,117 +349,113 @@
         </ul>
       </nav>
       <div class="container-projects">
-        <aside>
-          <h1>Meus projetos</h1>
-        </aside>
-        <main>
-          <div class="project-wrapper">
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/formulario-de-convite/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <img src="./assets/images/hairday.svg" alt="" />
-              </a>
+        <fieldset>
+          <legend><strong>Meus projetos</strong></legend>
+          <main>
+            <div class="project-wrapper">
+              <div class="project-inner">
+                <a href="#" target="_blank" rel="noopener noreferrer">
+                  <img src="./assets/images/hairday.svg" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/formulario-de-convite/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/mundo-pet.svg" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/sort-number/"
+                  target="_blank"
+                  ><img src="./assets/images/sort-number.png" alt=""
+                /></a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/formulario-de-matricula/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img src="./assets/images/estrelas.svg" alt=""
+                /></a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/quicklist/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img src="./assets/images/quicklist.svg" alt=""
+                /></a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/lp-zingen/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/zingen.png" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/convert-template/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/convert.png" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/refund/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/refund.png" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/lp-assinatura/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/lp-assinatura.png" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/lp-patins/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/lp-patins.svg" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/projeto-travelgram/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/travelgram.png" alt="" />
+                </a>
+              </div>
+              <div class="project-inner">
+                <a
+                  href="https://ayrtonyamashita.github.io/formulario-de-convite/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="./assets/images/festivite.png" alt="" />
+                </a>
+              </div>
             </div>
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/formulario-de-convite/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <img src="./assets/images/mundo-pet.svg" alt="" />
-              </a>
-            </div>
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/sort-number/"
-                target="_blank"
-                ><img src="./assets/images/sort-number.png" alt=""
-              /></a>
-            </div>
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/formulario-de-matricula/"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><img src="./assets/images/estrelas.svg" alt=""
-              /></a>
-            </div>
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/quicklist/"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><img src="./assets/images/quicklist.svg" alt=""
-              /></a>
-            </div>
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/zingen/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <img src="./assets/images/zingen.png" alt="" />
-              </a>
-            </div>
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/convert/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <img src="./assets/images/convert.png" alt="" />
-              </a>
-            </div>
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/refund/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <img src="./assets/images/refund.png" alt="" />
-              </a>
-            </div>
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/lp-assinatura/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <img src="./assets/images/lp-assinatura.png" alt="" />
-              </a>
-            </div>
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/lp-patins/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <img src="./assets/images/lp-patins.svg" alt="" />
-              </a>
-            </div>
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/projeto-travelgram/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <img src="./assets/images/travelgram.png" alt="" />
-              </a>
-            </div>
-            <div class="project-inner">
-              <a
-                href="https://ayrtonyamashita.github.io/formulario-de-convite/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <img src="./assets/images/festivite.png" alt="" />
-              </a>
-            </div>
-          </div>
-        </main>
+          </main>
+        </fieldset>
       </div>
     </section>
 
@@ -488,46 +483,52 @@
         </ul>
       </nav>
       <fieldset>
-        <legend><strong>Desenvolvimento de Sites</strong></legend>
-        <p>
-          Como forma de aprendizado, iniciei alguns projetos de sites fictícios
-          de empresas imaginárias mas que possuem funções que podem agregar no
-          mundo real como o site
-          <a href="https://ayrtonyamashita.github.io/quicklist/" target="_blank"
-            ><img
-              width="80px"
-              height="auto"
-              src="./assets/images/quicklist.svg"
-              alt=""
-          /></a>
-          desenvolvido para gerenciar sua lista de compras de forma mais
-          dinâmica e eficiente.
-        </p>
-      </fieldset>
+        <legend><strong>Experiências</strong></legend>
+        <fieldset>
+          <legend><strong>Desenvolvimento de Sites</strong></legend>
+          <p>
+            Como forma de aprendizado, iniciei alguns projetos de sites
+            fictícios de empresas imaginárias mas que possuem funções que podem
+            agregar no mundo real como o site
+            <a
+              href="https://ayrtonyamashita.github.io/quicklist/"
+              target="_blank"
+              ><img
+                width="80px"
+                height="auto"
+                src="./assets/images/quicklist.svg"
+                alt=""
+            /></a>
+            desenvolvido para gerenciar sua lista de compras de forma mais
+            dinâmica e eficiente.
+          </p>
+        </fieldset>
 
-      <fieldset>
-        <legend><strong>Automação de Processos</strong></legend>
-        <p>
-          Desenvolvimento de uma aplicação de automação de processos
-          administrativos, analisei um processo manual com muitas repetições e
-          construí a solução para este problema utilizando Python como um
-          gerenciador dos dados recebidos.
-          <br />
-          A aplicação lê uma quantidade massiva de dados em um arquivo .xlsx e
-          replica esses dados no sistema iniciando um navegador automáticamente,
-          ao fim da operação é gerado um relatório de todos documentos enviados
-          e não enviados.
-        </p>
-      </fieldset>
+        <fieldset>
+          <legend><strong>Automação de Processos</strong></legend>
+          <p>
+            Desenvolvimento de uma aplicação de automação de processos
+            administrativos, analisei um processo manual com muitas repetições e
+            construí a solução para este problema utilizando Python como um
+            gerenciador dos dados recebidos.
+            <br />
+            A aplicação lê uma quantidade massiva de dados em um arquivo .xlsx e
+            replica esses dados no sistema iniciando um navegador
+            automáticamente, ao fim da operação é gerado um relatório de todos
+            documentos enviados e não enviados.
+          </p>
+        </fieldset>
 
-      <fieldset>
-        <legend><strong>Analista de TI - PJ</strong></legend>
-        <p>
-          Atuando como analista técnico gerenciando equipamentos da empresa como
-          workstations, servidores, micro-gerenciamento de redes dentre outras
-          funcionalidades que agregam em uma boa relação relação as tecnologias
-          da empresa afim de garantir a qualidade tecnica exigida pela empresa.
-        </p>
+        <fieldset>
+          <legend><strong>Analista de TI - PJ</strong></legend>
+          <p>
+            Atuando como analista técnico gerenciando equipamentos da empresa
+            como workstations, servidores, micro-gerenciamento de redes dentre
+            outras funcionalidades que agregam em uma boa relação relação as
+            tecnologias da empresa afim de garantir a qualidade tecnica exigida
+            pela empresa.
+          </p>
+        </fieldset>
       </fieldset>
     </section>
 
@@ -577,6 +578,14 @@
           <div class="social-media">
             <img src="./assets/icons/instagram.svg" alt="logo instagram" />
             <span>Instagram</span>
+            <img src="./assets/icons/arrow.svg" alt="" />
+          </div>
+        </a>
+
+        <a href="mailto:ayrtonyamashita@gmail.com">
+          <div class="social-media">
+            <img src="./assets/icons/mail.svg" alt="ícone email" />
+            <span>Email</span>
             <img src="./assets/icons/arrow.svg" alt="" />
           </div>
         </a>
